--- a/Loginmodule ver.3
+++ b/Loginmodule ver.3
@@ -12,7 +12,7 @@ def menu():
         if choice == "1":
             login()
         elif choice == "2":
-            print("goodbye")
+            print("Thank you for using Chatpal")
             sys.exit()
         else:
             print("Unrecognized choice")
@@ -36,6 +36,6 @@ def login():
                 reply = input("Do you want to try again? y/n: ")
                 if reply.lower() == "n":
                     print("Thank you for using our service")
-                menu()
+                sys.exit()
 
 menu()
